--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <p style="translate: none; rotate: none; scale: none; transform: translate(0px); opacity: 1;">IT'S ABOUT
                 TIME! History repeats itself, but now on the Ethereum blockchain. Thanks to the relentless spirit of
                 $AMC community, We'll rewrite the financial narrative on the Ethereum blockchain.</p>
-            <div id="connect_button" class="btns_container">
+            <div class="btns_container">
                 <a 
                     class="btn"
-                    id="connect_button" style="translate: none; rotate: none; scale: none; transform: translate(0px); opacity: 1;">CLAIM
+                    style="translate: none; rotate: none; scale: none; transform: translate(0px); opacity: 1;">CLAIM
                     AIRDROP</a>
             </div>
         </div>
